--- a/Thadunge2_Fork_Working_Colab.ipynb
+++ b/Thadunge2_Fork_Working_Colab.ipynb
@@ -67,11 +67,7 @@
       "metadata": {
         "id": "ZzWuh7dC87-j",
         "colab_type": "code",
-        "outputId": "86a4e597-9966-41d1-810b-306d13641d86",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "colab": {}
       },
       "source": [
         "!git clone --branch master https://github.com/thadunge2/AIDungeon\n",
@@ -84,15 +80,7 @@
         "print(\"Download Complete!\")"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Download Complete!\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -109,11 +97,7 @@
       "metadata": {
         "id": "-Lz_r-eJ9Klc",
         "colab_type": "code",
-        "outputId": "dfbf88d8-3fce-4118-cb50-e1efc3457438",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1330
-        }
+        "colab": {}
       },
       "source": [
         "from IPython.display import Javascript\n",
@@ -121,103 +105,7 @@
         "!python play.py"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "google.colab.output.setIframeHeight(0, true, {maxHeight: 5000})"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "AI Dungeon 2 will save and use your actions and game to continually improve AI\n",
-            " Dungeon. If you would like to disable this enter 'nosaving' for any action.\n",
-            " This will also turn off the ability to save games.\n",
-            "\n",
-            "Initializing AI Dungeon! (This might take a few minutes)\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            " ▄▄▄       ██▓   ▓█████▄  █    ██  ███▄    █   ▄████ ▓█████  ▒█████   ███▄    █    \n",
-            "▒████▄    ▓██▒   ▒██▀ ██▌ ██  ▓██▒ ██ ▀█   █  ██▒ ▀█▒▓█   ▀ ▒██▒  ██▒ ██ ▀█   █    \n",
-            "▒██  ▀█▄  ▒██▒   ░██   █▌▓██  ▒██░▓██  ▀█ ██▒▒██░▄▄▄░▒███   ▒██░  ██▒▓██  ▀█ ██▒   \n",
-            "░██▄▄▄▄██ ░██░   ░▓█▄   ▌▓▓█  ░██░▓██▒  ▐▌██▒░▓█  ██▓▒▓█  ▄ ▒██   ██░▓██▒  ▐▌██▒   \n",
-            " ▓█   ▓██▒░██░   ░▒████▓ ▒▒█████▓ ▒██░   ▓██░░▒▓███▀▒░▒████▒░ ████▓▒░▒██░   ▓██░   \n",
-            " ▒▒   ▓▒█░░▓      ▒▒▓  ▒ ░▒▓▒ ▒ ▒ ░ ▒░   ▒ ▒  ░▒   ▒ ░░ ▒░ ░░ ▒░▒░▒░ ░ ▒░   ▒ ▒    \n",
-            "  ▒   ▒▒ ░ ▒ ░    ░ ▒  ▒ ░░▒░ ░ ░ ░ ░░   ░ ▒░  ░   ░  ░ ░  ░  ░ ▒ ▒░ ░ ░░   ░ ▒░   \n",
-            "  ░   ▒    ▒ ░    ░ ░  ░  ░░░ ░ ░    ░   ░ ░ ░ ░   ░    ░   ░ ░ ░ ▒     ░   ░ ░    \n",
-            "      ░  ░ ░        ░       ░              ░       ░    ░  ░    ░ ░           ░    \n",
-            "                  ░                                                                \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "0) New Game\n",
-            "1) Load Game\n",
-            "\n",
-            "Enter the number of your choice: 0\n",
-            "\n",
-            "\n",
-            "\n",
-            "Pick a setting.\n",
-            "0) fantasy (recommended)\n",
-            "1) mystery\n",
-            "2) apocalyptic\n",
-            "3) zombies\n",
-            "4) custom\n",
-            "Enter the number of your choice: 4\n",
-            "\n",
-            "Enter a prompt that describes who you are and the first couple sentences of where\n",
-            " you start out ex:\n",
-            " 'You are a knight in the kingdom of Larion. You are hunting the evil dragon\n",
-            " who has been terrorizing the kingdom. You enter the forest searching for the\n",
-            " dragon and see' \n",
-            "Starting Prompt: You are a dragon\n",
-            "\n",
-            "AI Dungeon 2 Instructions:\n",
-            " Enter actions starting with a verb ex. \"go to the tavern\" or \"attack the orc.\"\n",
-            " To speak enter 'say \"(thing you want to say)\"' or just \"(thing you want to say)\"\n",
-            " \n",
-            "\n",
-            "The following commands can be entered for any action: \n",
-            "  \"revert\"   Reverts the last action allowing you to pick a different action.\n",
-            "  \"retry\"    Reverts the last action and tries again with the same action.\n",
-            "  \"quit\"     Quits the game and saves\n",
-            "  \"restart\"  Starts a new game and saves your current one\n",
-            "  \"save\"     Makes a new save of your game and gives you the save ID\n",
-            "  \"load\"     Asks for a save ID and loads the game if the ID is valid\n",
-            "  \"print\"    Prints a transcript of your adventure (without extra newline formatting)\n",
-            "  \"help\"     Prints these instructions again\n",
-            "  \"censor off/on\" to turn censoring off or on.\n",
-            "  \"ping off/on\" to turn playing a ping sound when the AI responds off or on.\n",
-            " (not compatible with Colab)\n",
-            "  \"infto ##\" to set a timeout for the AI to respond.\n",
-            "  \"temp #\"   Changes the AI's temperature (higher temperature = less focused).\n",
-            " Default is 4.\n",
-            "  \"remember XXX\" to commit something important to the AI's memory for that session.\n",
-            "\n",
-            "Generating story...\n",
-            "\n",
-            "\n",
-            "You are a dragon. You have been for quite some time now, and you're not going\n",
-            " to stop any time soon.\n",
-            "You roar at the sky as you fly over the battlefield. The battle is fierce here,\n",
-            " but it's also very personal\n",
-            "> "
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
